Fix pagination color issue in dark mode.

--- a/assets/scss/dark-mode.scss
+++ b/assets/scss/dark-mode.scss
@@ -106,7 +106,10 @@ body.night {
       @media screen and (max-width: $single-column-max-width) {
         background: $dark-mode-back-container-background;
       }
-      .post-comment-wrapper *{
+      .post-pagination a:not([href]){
+        color: $dark-mode-text;
+      }
+      .post-comment-wrapper * {
         color: $dark-mode-text;
       }
     }
